fix spacing btwn My project and add images to css card selector

--- a/assets/css/cardselector.css
+++ b/assets/css/cardselector.css
@@ -27,3 +27,11 @@
 .flipped .card-up{
     transform: rotateY(180deg);
 }
+.image-1{
+background-image: url(pics/Myproject.png);
+
+}
+
+.image-2{
+    background-image: url(pics/red-hangry.png);
+}
